--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -9,27 +9,140 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<script src="js/jquery-3.3.1.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/messages_zh.js"></script>
 <!-- //for-mobile-apps -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- js -->
-<script src="js/jquery.min.js"></script>
 <!-- //js -->
 <!-- cart -->
 	<script src="js/simpleCart.min.js"> </script>
 <!-- cart -->
 <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 <!-- for bootstrap working -->
-	<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
-<!-- //for bootstrap working -->
-<link href='http://fonts.useso.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
 <!-- animation-effect -->
 <link href="css/animate.min.css" rel="stylesheet"> 
 <script src="js/wow.min.js"></script>
-<script>
- new WOW().init();
-</script>
+	<script>
+		new WOW().init();
+	</script>
+	<script>
+		$(function () {
+			//检测用户名是否存在
+			$.validator.addMethod("checkUser", function (value) {
+				var flag = false;
+				$.ajax({
+					url : "/shop/user/checkUser",
+					data : {username : value},
+					success : function (result) {
+						flag = result.flag;
+					},
+					dataType : "json",
+					type : "post",
+					async : false
+				});
+				console.log(flag);
+				return flag;
+			})
+			//检测验证码是否正确
+			$.validator.addMethod("checkCode", function (value) {
+				var flag = false;
+				$.ajax({
+					url : "/shop/TestCodeServlet",
+					data : {inputCode : value},
+					success : function (result) {
+						flag = result.flag;
+					},
+					dataType: "json",
+					type: "post",
+					async: false
+				});
+				return flag;
+			})
+			$("#registerForm").validate({
+				rules : {
+					uname : {
+						required : true,
+						minlength : 4,
+						maxlength : 10,
+						checkUser : true,
+					},
+					phone : {
+						required : true,
+						rangelength : [11,11]
+					},
+					address : {
+						required : true
+					},
+					email : {
+						required : true
+					},
+					password : {
+						required : true,
+						minlength : 6,
+						maxlength : 32,
+					},
+					repeatPassword: {
+						required : true,
+						equalTo: "[name='password']"
+					},
+					check : {
+						checkCode: true
+					}
+
+				},
+				//使用errorPlacement代替错误信息提示,改为输入框样式改变
+				errorPlacement : function (error, element) {
+					var  cls = element.prop("class");
+					if (cls.indexOf('error') > -1){
+						element.css("border", "solid 1px #ff0000");
+					} else {
+						element.css("border", "");
+					}
+				},
+				//使用此json对象使得成功时不会有任何错误信息框出现
+				success : function (element) {
+					//element为当前验证的element元素
+					console.log(element);
+				}
+				//设定提示信息
+		// 		messages:{
+		// 			uname:{
+		// 				required:"用户名不能为空!",
+		// 				checkuser : "用户名已经存在",
+		// 				minlength : "用户名至少4位",
+		// 				maxlength : "用户名最多10位"
+		// 			},
+		// 			phone:{
+		// 				digits: "请输入有效的11位手机号码"
+		// 			},
+		// 			address: {
+		// 				required : "收件地址不能为空"
+		// 			},
+		// 			email:{
+		// 				required:"邮箱不能为空!",
+		// 				email:"邮箱不存在"
+		// 			},
+		// 			password:{
+		// 				required : "密码不能为空!",
+		// 				minlength : "密码至少为6位",
+		// 				maxlength : "密码最多32位"
+		// 			},
+		// 			repeatPassword:{
+		// 				required:"请再次输入密码",
+		// 				equalTo:"密码必须与上次相同!"
+		// 			},
+		// 			check:{
+		// 				required : "验证码不能为空!",
+		// 				checkCode : "验证码错误"
+		// 			}
+		// 		}
+			})
+		})
+	</script>
 <!-- //animation-effect -->
 </head>
 	
@@ -208,34 +321,49 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="register">
 		<div class="container">
 			<h3 class="animated wow zoomIn" data-wow-delay=".5s">Register Here</h3>
-			<p class="est animated wow zoomIn" data-wow-delay=".5s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-				deserunt mollit anim id est laborum.</p>
+			<p class="est animated wow zoomIn" data-wow-delay=".5s">创建属于你的帐号,开启一场购物之旅</p>
 			<div class="login-form-grids">
-				<h5 class="animated wow slideInUp" data-wow-delay=".5s">profile information</h5>
-				<form class="animated wow slideInUp" data-wow-delay=".5s">
-					<input type="text" placeholder="First Name..." required=" " >
-					<input type="text" placeholder="Last Name..." required=" " >
-				</form>
-				<div class="register-check-box animated wow slideInUp" data-wow-delay=".5s">
-					<div class="check">
-						<label class="checkbox"><input type="checkbox" name="checkbox"><i> </i>Subscribe to Newsletter</label>
-					</div>
-				</div>
-				<h6 class="animated wow slideInUp" data-wow-delay=".5s">Login information</h6>
-				<form class="animated wow slideInUp" data-wow-delay=".5s">
-					<input type="email" placeholder="Email Address" required=" " >
-					<input type="password" placeholder="Password" required=" " >
-					<input type="password" placeholder="Password Confirmation" required=" " >
-					<div class="register-check-box">
-						<div class="check">
-							<label class="checkbox"><input type="checkbox" name="checkbox"><i> </i>I accept the terms and conditions</label>
+				<h5 class="animated wow slideInUp" data-wow-delay=".5s">个人信息</h5>
+				<form class="animated wow slideInUp form-horizontal" id="registerForm" data-wow-delay=".5s" action="/shop/user/register">
+					<input type="text" placeholder="请输入用户名" name="uname">
+					<input type="text" placeholder="请输入电话号码" name="phone">
+					<input type="text" placeholder="请输入收件地址" name="address">
+					<label class="radio-inline">
+						<input type="radio" name="sex" id="male" value="男"> 男
+					</label>
+					<label class="radio-inline">
+						<input type="radio" name="sex" id="female" value="女"> 女
+					</label>
+				<h6 >登录信息</h6>
+					<input type="email" placeholder="请输入邮箱" name="email">
+					<input type="password" placeholder="请输入密码" name="password">
+					<input type="password" placeholder="确认密码" name="repeatPassword">
+
+					<div class="form-group" style="margin-top: 10px">
+						<div class="col-sm-4">
+							<input type="text" class="form-control" name="check" placeholder="请输入验证码">
+						</div>
+						<div class="col-sm-6">
+							<img src="/shop/checkCode" style="margin-top: 15px" height="32px" alt="" onclick="changeCheckCode(this)">
+							<script type="text/javascript">
+								//图片点击事件
+								function changeCheckCode(img) {
+									img.src="/shop/checkCode?"+new Date().getTime();
+								}
+							</script>
 						</div>
 					</div>
-					<input type="submit" value="Register">
+
+					<div class="register-check-box">
+						<div class="check">
+							<label class="checkbox"><input type="checkbox" name="checkbox" required><i> </i>我接受这些条款和条件</label>
+						</div>
+					</div>
+					<input type="submit" value="注册">
 				</form>
 			</div>
 			<div class="register-home animated wow slideInUp" data-wow-delay=".5s">
-				<a href="index.html">Home</a>
+				<a href="index.html">回到主页</a>
 			</div>
 		</div>
 	</div>
