--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -30,6 +30,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script>
  new WOW().init();
 </script>
+	<script>
+		$(function () {
+         $("#submit").click(function () {
+                   "/shop/login",
+                 $("#login").serialize(),
+		            function (data) {
+                   if(data.flag){
+	            location.href("index.html");
+                   }else{
+
+                }
+		       },"json"
+		 });
+		});
+	</script>
 <!-- //animation-effect -->
 </head>
 	
@@ -211,13 +226,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<p class="est animated wow zoomIn" data-wow-delay=".5s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
 				deserunt mollit anim id est laborum.</p>
 			<div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-				<form>
-					<input type="email" placeholder="Email Address" required=" " >
-					<input type="password" placeholder="Password" required=" " >
+<!--				action="/shop/login"-->
+				<form id="login">
+					<input type="email" name="email" placeholder="Email Address" required=" " >
+					<input type="password" name="password" placeholder="Password" required=" " >
 					<div class="forgot">
 						<a href="#">Forgot Password?</a>
 					</div>
-					<input type="submit" value="Login">
+					<input type="submit" id="submit"value="Login">
 				</form>
 			</div>
 			<h4 class="animated wow slideInUp" data-wow-delay=".5s">For New People</h4>
