--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -31,19 +31,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  new WOW().init();
 </script>
 	<script>
+		// $(function () {
+        //  $("#submit").click(function () {
+        //            "/shop/login",
+        //          $("#login").serialize(),
+		//             function (data) {
+        //            if(data.flag){
+	    //         location.href("index.html");
+        //            }else{
+		//
+        //         }
+		//        },"json"
+		//  });
+		// });
 		$(function () {
-         $("#submit").click(function () {
-                   "/shop/login",
-                 $("#login").serialize(),
-		            function (data) {
-                   if(data.flag){
-	            location.href("index.html");
-                   }else{
+			$("#submit").click(function () {
 
-                }
-		       },"json"
-		 });
-		});
+
+			})
+
+		})
 	</script>
 <!-- //animation-effect -->
 </head>
@@ -233,7 +240,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="forgot">
 						<a href="#">Forgot Password?</a>
 					</div>
-					<input type="submit" id="submit"value="Login">
+					<input type="button" id="submit"value="Login">
 				</form>
 			</div>
 			<h4 class="animated wow slideInUp" data-wow-delay=".5s">For New People</h4>
