--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -232,9 +232,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="row">
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown" id="labellist1">
-												<h6>Men's Wear</h6>
-												<li><a href="products.html">Clothing</a></li>
-												<li><a href="products.html">Wallets</a></li>
+<!--												<h6>Men's Wear</h6>-->
+<!--												<li><a href="products.html">Clothing</a></li>-->
+<!--												<li><a href="products.html">Wallets</a></li>-->
 <!--												<li><a href="products.html">Shoes</a></li>-->
 <!--												<li><a href="products.html">Watches</a></li>-->
 <!--												<li><a href="products.html">Accessories</a></li>-->
@@ -242,9 +242,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown" id="labellist2">
-												<h6>Women's Wear</h6>
-												<li><a href="products.html">Clothing</a></li>
-												<li><a href="products.html">Wallets,Bags</a></li>
+<!--												<h6>Women's Wear</h6>-->
+<!--												<li><a href="products.html">Clothing</a></li>-->
+<!--												<li><a href="products.html">Wallets,Bags</a></li>-->
 <!--												<li><a href="products.html">Footwear</a></li>-->
 <!--												<li><a href="products.html">Watches</a></li>-->
 <!--												<li><a href="products.html">Accessories</a></li>-->
@@ -254,10 +254,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown" id="labellist3">
-												<h6>Kid's Wear</h6>
+<!--												<h6>Kid's Wear</h6>-->
 <!--												<li><a href="products.html">Kids Home Fashion</a></li>-->
-												<li><a href="products.html">Boy's Clothing</a></li>
-												<li><a href="products.html">Girl's Clothing</a></li>
+<!--												<li><a href="products.html">Boy's Clothing</a></li>-->
+<!--												<li><a href="products.html">Girl's Clothing</a></li>-->
 <!--												<li><a href="products.html">Shoes</a></li>-->
 <!--												<li><a href="products.html">Brand Stores</a></li>-->
 											</ul>
