--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -72,8 +72,7 @@ $(function () {
 				'\t\t\t\t\t</div>\n' +
 				'\t\t\t\t\t<div class="description">\n' +
 				'\t\t\t\t\t\t<h5><i>Description</i></h5>\n' +
-				'\t\t\t\t\t\t<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore \n' +
-				'\t\t\t\t\t\t\teu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>\n' +
+				'\t\t\t\t\t\t<p>'+good.description+'</p>\n' +
 				'\t\t\t\t\t</div>\n' +
 				'\t\t\t\t\t<div class="color-quality">\n' +
 				'\t\t\t\t\t\t<div class="color-quality-left">\n' +
