--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				var flag = false;
 				$.ajax({
 					url : "/shop/checkUser",
-					data : {username : value},
+					data : {uname : value},
 					success : function (result) {
 						flag = result.flag;
 					},
